--- a/css/common.css
+++ b/css/common.css
@@ -188,21 +188,43 @@ a:link,a:visited,a:active{
 /* banner */
 .banner{
 	/*height: 372px;*/
+	
+
 }
-.banner .imgs,
+
+.banner .wrap{
+	overflow: hidden;
+	height: 372px;
+	position: relative;
+	width: 100%;
+}
+.banner .wrap,
+/*.banner .imgs,*/
+/*.banner .imgs li,*/
 .banner .banner_nav{
 	width: 100%;
 	min-width: 1000px;
 }
 .banner .imgs{
-	overflow: hidden;
+	/*overflow: hidden;*/
+	/*width: auto;*/
+	width:300%;
 	height: 372px;
+	position: absolute;
+	left: 0;
+	/*top: 0;*/
+	/*position: relative;*/
 }
 .banner .imgs li{
 	float: left;
 	height: 372px;
-	width: 100%;
-	min-width: 1000px;
+	width: 33.333333333333%;
+	/*position: absolute;*/
+	/*width: 1200px;*/
+	/*width: 1920px;*/
+	/*display: block;*/
+	/*width: 100%;
+	min-width: 1000px;*/
 }
 .banner .imgs .list1{
 	background: url(../images/banner/img_001_1920x372.jpg) no-repeat center center;
@@ -243,6 +265,8 @@ a:link,a:visited,a:active{
 	background: url(../images/banner/ba_list_hover.png) no-repeat 0 0;
 }
 
+/*.banner .imgs,*/
+.banner .imgs li,
 .banner .banner_nav li,
 .banner .banner_nav li a{
 	-webkit-transition:all 0.4s ease-out;
