--- a/css/page.css
+++ b/css/page.css
@@ -154,6 +154,115 @@
 	transition:all 0.4s ease-out;
 }
 
+/* 优势 */
+.advantage{
+
+}
+.advantage .content{
+	overflow:hidden;
+}
+
+.advantage .content .list_wrap{
+	margin: 60px 0 0 0;
+	overflow:hidden;
+}
+.advantage .content .list_wrap .list{
+	margin: 0 0 20px 20px;
+	height: 200px;
+	overflow: hidden;
+	/*color: */
+}
+
+.advantage .content .img{
+	float: left;
+	width: 50%;
+}
+.advantage .content .img p{
+	height: 400px;
+	text-align: center;
+	vertical-align: middle;
+	display: table-cell;
+}
+.advantage .content .img img{
+	/*text-align: center;*/
+	/*vertical-align: middle;*/
+}
+
+
+.advantage .content .txt{
+	float: right;
+	width: 50%;
+}
+
+.advantage .content .txt .list .serialnum{
+	display: block;
+	float: left;
+	width: 60px;
+	height: 86px;
+	font-size: 8em;
+	line-height: 86px;
+	text-align: center;
+	font-weight: bold;
+	color: #fff;
+	background: url(../images/bg_advantage_list.png) no-repeat 0 0;
+	padding: 0 10px 0 0; 
+}
+.advantage .content .txt .list .warp{
+	float: left;
+	width: 410px;
+}
+.advantage .content .txt .list .mian_title{
+	font-size: 3.2em;
+	line-height: 1.5em;
+	color: #008b8d;
+	font-weight: bold;
+}
+.advantage .content .txt .list .sub_title{
+	font-size: 2.4em;
+	line-height: 1.6em;
+	color: #000;
+}
+.advantage .content .txt .list .detail{
+	font-size: 2.2em;
+	line-height: 1.5em;
+	color: #a0a0a0;
+	padding: 8px 0 0 0;
+	clear: both;
+}
+
+.advantage .content .imgtxt{
+	
+}
+.advantage .content .imgtxt .img{
+	float: left;
+}
+.advantage .content .imgtxt .txt{
+	float: right;
+}
+
+.advantage .content .txtimg{
+	
+}
+.advantage .content .txtimg .img{
+	float: right;
+}
+.advantage .content .txtimg .txt{
+	float: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 合作客户 */
 .cooperative{
 	/*vertical-align: text-top;*/
@@ -285,8 +394,176 @@
 .about{
 	width: 618px;
 }
+.about .content{
+	padding: 18px 23px;
+	background:#f1f1f1;
+	/*overflow: hidden;*/
+}
+.about .content .mian_img{
+	/*padding: 18px 23px;*/
+	width: 280px;
+	height: 160px;
+	border: 1px solid #d3d3d3;
+	padding: 1px;
+	float: left;
+}
+.about .content .txt{
+	/*padding: 18px 23px;*/
+	font-size: 1.4em;
+	line-height: 1.4em;
+	text-indent: 2em;
+	width: 268px;
+	margin: 0 0 0 20px;
+	float: right;
+}
+.about .content .imgs{
+	padding: 20px 0 0 0;
+	overflow: hidden;
+	clear: both;
+}
+.about .content .imgs li{
+	float: left;
+	padding: 0 0 0 1px;
+}
+.about .content .imgs li:first-child{
+	padding: 0;
+}
+.about .content .imgs li a{
+	display: block;
+	cursor: default;
+}
+.about .content .imgs li .img{
+	width: 140px;
+	height: 80px;
+	border: 1px solid #d3d3d3;
+	padding: 1px;
+	padding:0;
+	margin:0; 
+}
+
+.about .content .imgs li:hover .img{
+	border: 1px solid #ce0000;
+	-webkit-transform:scale(0.96);
+	-moz-transform:scale(0.96);
+	-ms-transform:scale(0.96);
+	-o-transform:scale(0.96);
+	transform:scale(0.96);
+}
+.about .content .imgs li,
+.about .content .imgs li a,
+.about .content .imgs li a .img{
+	-webkit-transition:all 0.4s ease-out;
+	-moz-transition:all 0.4s ease-out;
+	-ms-transition:all 0.4s ease-out;
+	-o-transition:all 0.4s ease-out;
+	transition:all 0.4s ease-out;
+}
+
+/* 荣誉证书 */
+.certificate{
+	width: 364px;
+	height: 344px;
+	border:1px solid #d4d4d4;
+	padding: 1px;
+	margin: 5px 0 5px 10px;
+	/*overflow: hidden;*/
+}
+
+.certificate .title,
+.certificate .content{
+	top: -8px;
+	position: relative;
+}
+
+.certificate .title{
+	text-align: center;
+	font-size: 2.4em;
+	line-height: 50px;
+	color:#fff;
+	background: #f1f1f1 url(../images/certificate_title.png) no-repeat 0 0;
+	width: 364px;
+	height: 54px;
+}
+.certificate .content{
+	background-color:#f1f1f1;
+	padding :8px 0 0 0 ;
+	height: 290px;
+}
+.certificate .content .li{
+	display: inline-block;
+	+display: inline;
+	+zoom: 1;
+	height: 290px;
+	vertical-align: top;
+	/*width: 30px;*/
+}
+.certificate .content .wrap{
+	width: 214px;
+	height: 284px;
+	margin: 0 22px;
+	overflow: hidden;
+	position: relative;
+}
+
+.certificate .content .li .btn_l,
+.certificate .content .li .btn_r{
+	display: block;
+	position: relative;
+	top: 50%;
+	width: 30px;
+	height: 30px;
+	margin: -50% 10px 0 10px; 
+	background: url(../images/spirit_direction.jpg) no-repeat 0 0;
+}
+.certificate .content .li .btn_r{
+	background-position: 0 -30px;
+}
+
+.certificate .content .li:hover .btn_l{
+	background-position: -4px 0;
+}
+.certificate .content .li:hover .btn_r{
+	background-position:  4px -30px;
+}
+
+.certificate .content .imgs{
+	width: 100%;
+	height: 284px;
+	/*text-align: center;*/
+	position: absolute;
+}
+.certificate .content .imgs .list{
+	height: 284px;
+	float: left;
+}
+.certificate .content .imgs .img{
+	width: 210px;
+	height: 280px;
+	padding: 1px;
+	border: 1px solid #d4d4d4;
+}
+.certificate .content .imgs .list:hover .img{
+	/*border: 1px solid #ce0000;*/
+	-webkit-transform:scale(0.96);
+	-moz-transform:scale(0.96);
+	-ms-transform:scale(0.96);
+	-o-transform:scale(0.96);
+	transform:scale(0.96);
+}
 
 
+
+.certificate .content .li .btn_r,
+.certificate .content .li .btn_l,
+.certificate .content .imgs,
+.certificate .content .imgs .list,
+.certificate .content .imgs .img{
+	-webkit-transition:all 0.4s ease-out;
+	-moz-transition:all 0.4s ease-out;
+	-ms-transition:all 0.4s ease-out;
+	-o-transition:all 0.4s ease-out;
+	transition:all 0.4s ease-out;
+}
 
 
 
