--- a/new/css/common.css
+++ b/new/css/common.css
@@ -4,12 +4,20 @@
 body{
 	font-family:Helvetica,Arial,"Microsoft YaHei","微软雅黑",STXihei,"华文细黑",SimSun,"宋体",sans-serif;
 	font-size:62.5%;
+	background-color: #f5f5f5;
 }
 
 /* 通用样式 */
 a:link,a:visited,a:active,a:hover{
 	text-decoration: none;
 }
+
+a:link,a:visited,a:active{
+    color: #fff;
+}
+
+
+
 
 .w{
 	width: 1200px;
@@ -24,39 +32,136 @@ a:link,a:visited,a:active,a:hover{
 .header{
 	background-color: #ed1c24;
 	height: 60px;
-	min-width: 1200px;
+	border-bottom: 2px solid transparent;
+	/*max-width: 1400px;*/
 }
 
-.logo{
+.header:hover{
+	border-bottom: 2px solid #ad0007;
+}
+
+.header .logo_wrap{
+	margin: 0 0 0 10px;
+}
+
+.header .logo_wrap .logo{
 	width: 60px;
 	height: 60px;
 	display: block;
 }
-.logo .img{
-	max-width: 60px;
-	max-height: 60px;
-	margin:0 auto; 
-	display: block;
-}
-.logo:hover{
+.header .logo_wrap .logo:hover{
 	-webkit-transform:scale(0.94);
 	-moz-transform:scale(0.94);
 	-ms-transform:scale(0.94);
 	-o-transform:scale(0.94);
 	transform:scale(0.94);
 }
+.header .logo_wrap .logo .img{
+	max-width: 60px;
+	max-height: 60px;
+	margin:0 auto; 
+	display: block;
+}
+
+.header .logo_wrap .title,
+.header .logo_wrap .sub_title{
+	height: 30px;
+	color: #fff;
+}
+
+.header .logo_wrap .title{
+	font-size: 1.6em;
+	line-height: 40px;
+}
+.header .logo_wrap .sub_title{
+	font-size: 1.4em;
+}
 
 
+
+/* footer */
+.footer{
+	background-color: #fff;
+	height: 60px;
+	border-top: 2px solid #dddddd;
+	overflow: hidden;
+}
+.footer .coyp{
+	font-size: 1.2em;
+	line-height: 60px;
+	margin: 0 0 0 10px;
+}
+
+.nav_bottom{
+	margin: 15px 10px 15px 0;
+}
+.nav_bottom .link{
+	font-size: 1.2em;
+	line-height: 30px;
+	color: #000;
+
+	margin: 0 10px;
+	padding: 0 0 4px 0;
+	height: 30px;
+	position: relative;
+}
+
+.nav_bottom .link .wire{
+	background-color: #ad0007;
+	height: 1px;
+	width: 0;
+	bottom: 0;
+	left: 0;
+	position: absolute;
+}
+
+.nav_bottom .link:hover .wire{
+	width:100%;
+}
+
+
+
+
+
+
+
+
+
+/* 导航 */
 .nav_mian{
-	
+	display: block;
 }
 
 .nav_mian .link{
 	height: 60px;
+	font-size: 1.4em;
+	line-height: 60px;
+	color: #fff;
+	text-align: center;
+	display: inline-block;
+	+display: inline;
+	+zoom: 1;
 }
 
 .nav_mian .link .hover{
-	
+	background-color:transparent;
+	height: 100%;
+	display: block;
+	border-radius: 6px;
+	line-height: 60px;
+	margin: 0 10px;
+	padding: 0 10px;
+}
+
+.nav_mian .link:hover .hover,
+.nav_mian .ahover{
+	background-color:#ad0007;
+	border-radius: 6px;
+	height: 30px;
+	line-height: 30px;
+	margin: 15px 10px;
+	/*vertical-align: middle;*/
+	/*display:table-row;*/
 }
 
 
@@ -70,8 +175,12 @@ a:link,a:visited,a:active,a:hover{
 
 
 /* css3*/
+.header,
 .logo,
-.logo .img{
+.logo .img,
+.nav_mian .link,
+.nav_mian .link .hover,
+.nav_bottom .link .wire{
 	-webkit-transition:all 0.4s ease-out;
 	-moz-transition:all 0.4s ease-out;
 	-ms-transition:all 0.4s ease-out;
@@ -82,10 +191,13 @@ a:link,a:visited,a:active,a:hover{
 /*
 
 主题色 	#ed1c24
+深红	#ad0007
+
+边框红  #d61119
 
 
-
-
+灰色	#f5f5f5
+深灰色  #dddddd
 
 
 */
