--- a/new/css/font.css
+++ b/new/css/font.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?npio7n');
-	src:url('fonts/icomoon.eot?#iefixnpio7n') format('embedded-opentype'),
-		url('fonts/icomoon.woff?npio7n') format('woff'),
-		url('fonts/icomoon.ttf?npio7n') format('truetype'),
-		url('fonts/icomoon.svg?npio7n#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?npio7n');
+	src:url('../fonts/icomoon.eot?#iefixnpio7n') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?npio7n') format('woff'),
+		url('../fonts/icomoon.ttf?npio7n') format('truetype'),
+		url('../fonts/icomoon.svg?npio7n#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon_image:before {
+	content: "\e61c";
+}
 .icon_media_play:before {
 	content: "\e600";
 }
@@ -104,6 +107,9 @@
 .icon_yes:before {
 	content: "\e61a";
 }
-.icon_false:before {
+.icon_no:before {
 	content: "\e61b";
+}
+.icon_box:before {
+	content: "\e61d";
 }
