--- a/new/css/page.css
+++ b/new/css/page.css
@@ -1,1 +1,144 @@
 @charset "utf-8";
+
+.banner_index_wrap{
+	background: #fff;
+}
+
+.banner_index_wrap .list{
+	height: 520px;
+	padding: 0 0 0 4%;
+	/*width: 99%;*/
+	overflow: hidden;
+}
+.banner_index_wrap .list .title{
+	margin: 100px 0 10px 0;
+	font-size: 3.8em;
+}
+.banner_index_wrap .list .info{
+	font-size: 1.6em;
+	line-height: 1.8em;
+}
+
+
+
+.banner_index_wrap .list_01{
+	background:#fff url(../images/banner/index/img_01.png) no-repeat right 0;
+}
+
+.banner_info_wrap{
+	background: #ef3b42;
+	height: 300px;
+	overflow: hidden;
+	text-align: center;
+}
+
+.banner_info_wrap .list{
+	color: #fff;
+	width: 33.33333333%;
+	height: 180px;
+	padding: 60px 0;
+	float: left;
+}
+.banner_info_wrap .list .ico{
+	font-size: 5em;
+}
+.banner_info_wrap .list .title,
+.banner_info_wrap .list .title_en{
+	font-size: 1.8em;
+	line-height: 1.8em;
+}
+.banner_info_wrap .list .title{
+	margin: 10px 0 0 0;
+}
+.banner_info_wrap .list .title_en{
+
+}
+
+.banner_info_wrap .list:hover{
+	/*background-color: #d70009;*/
+	/*color: #7d0005;*/
+}
+.banner_info_wrap .list:hover .ico{
+	color: #7d0005;
+	-webkit-transform: scale(0,-1);
+	-moz-transform: scale(0,-1);
+	-ms-transform: scale(0,-1);
+	-o-transform: scale(0,-1);
+	transform: scale(0,-1);
+}
+
+
+.cooperative_index{
+
+}
+.cooperative_index .wrap{
+
+}
+.cooperative_index .wrap .list{
+
+}
+
+.cooperative_index .wrap .list .img{
+
+}
+
+.cooperative_index .wrap .title{
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:1400px){
+	
+}
+
+
+
+
+
+@media (min-width:1400px) and (max-width: 1920px){
+
+}
+
+
+
+
+
+
+
+/* css3*/
+.banner_info_wrap .list,
+.banner_info_wrap .list .ico{
+	-webkit-transition:all 0.4s ease-out;
+	-moz-transition:all 0.4s ease-out;
+	-ms-transition:all 0.4s ease-out;
+	-o-transition:all 0.4s ease-out;
+	transition:all 0.4s ease-out;
+}
+
+
+/*
+
+主题色 	#ed1c24
+深红	#ad0007
+
+边框红  #d61119
+
+
+灰色	#f5f5f5
+深灰色  #dddddd
+
+
+*/
