--- a/new/css/page.css
+++ b/new/css/page.css
@@ -41,6 +41,7 @@
 }
 .banner_info_wrap .list .ico{
 	font-size: 5em;
+	display: block;
 }
 .banner_info_wrap .list .title,
 .banner_info_wrap .list .title_en{
@@ -60,35 +61,109 @@
 }
 .banner_info_wrap .list:hover .ico{
 	color: #7d0005;
-	-webkit-transform: scale(0,-1);
-	-moz-transform: scale(0,-1);
-	-ms-transform: scale(0,-1);
-	-o-transform: scale(0,-1);
-	transform: scale(0,-1);
+	-webkit-transform:  rotate(360deg);
+	-moz-transform:  rotate(360deg);
+	-ms-transform:  rotate(360deg);
+	-o-transform:  rotate(360deg);
+	transform:  rotate(360deg);
 }
-
 
 .cooperative_index{
-
+	margin: 20px auto;
 }
 .cooperative_index .wrap{
-
+	overflow: hidden;
 }
 .cooperative_index .wrap .list{
-
+	padding: 1px;
+	border: 2px solid #dddddd;
+	width: 160px;
+	height: 90px;
+	margin: 0 0 0 10px;
+	float: left;
+	/*background: url(../images/default_img.png) no-repeat center center;*/
+	background-size: cover;
+	text-align: center;
+	overflow: hidden;
 }
 
 .cooperative_index .wrap .list .img{
-
+	max-width: 160px;
+	max-height:90px; 
 }
 
 .cooperative_index .wrap .title{
+	background:none;
+	width:62px;
+	margin: 0;
+	padding:0;
+	border:0;
+	font-size: 1.5em;
+}
 
+
+.cooperative_index .wrap .list:hover{
+	border: 2px solid #d61119;
+}
+.cooperative_index .wrap .list:hover .img{
+	-webkit-transform:scale(1.04);
+	-moz-transform:scale(1.04);
+	-ms-transform:scale(1.04);
+	-o-transform:scale(1.04);
+	transform:scale(1.04);
+}
+
+.cooperative_index .wrap .title:hover{
+	border:none;
 }
 
 
 
+/* 广告01 */
+.ad_index_01{
+	height: 372px;
+	background: url(../images/ad/index/img_001_1920x372.jpg) no-repeat center 0;
+}
 
+/* 暂时使用图片 */
+/* benner_index_x */
+.benner_index_x{
+	text-align: center;
+	background: #fff;
+
+}
+
+.benner_index_x .img{
+	
+}
+
+/* index 关于我们 */
+.about_index{
+	padding: 40px 0;
+	overflow: hidden;
+}
+.about_index .photo,
+.about_index .info{
+	width: 50%;
+	float: left;
+}
+
+.about_index .photo .img{
+
+}
+.about_index .info{
+
+}
+.about_index .info .title{
+	font-size: 3em;
+	font-weight: bold;
+	/*margin: 0 0 20px 0;*/
+}
+.about_index .info .txt{
+	font-size: 1.4em;
+	line-height: 1.8em;
+	margin:20px 0;
+}
 
 
 
@@ -120,7 +195,9 @@
 
 /* css3*/
 .banner_info_wrap .list,
-.banner_info_wrap .list .ico{
+.banner_info_wrap .list .ico,
+.cooperative_index .wrap .list,
+.cooperative_index .wrap .list .img{
 	-webkit-transition:all 0.4s ease-out;
 	-moz-transition:all 0.4s ease-out;
 	-ms-transition:all 0.4s ease-out;
