--- a/new/css/common.css
+++ b/new/css/common.css
@@ -23,12 +23,21 @@ a:link,a:visited,a:active{
 	width: 1200px;
 	margin: 0 auto;
 }
+.sub_w{
+	width: 1200px;
+	margin: 0 auto;
+}
+
 .min_w{
 	min-width: 1200px;
 }
+
+
+
 .bg_white{
 	background: #fff;
 }
+
 
 
 /* common */
@@ -173,8 +182,182 @@ a:link,a:visited,a:active{
 }
 
 
+/* 子页内容区 */
+.mian_content{
+	background: #fff;
+
+	margin: 40px auto;
+	padding: 0 0 20px 0;
+	border: 1px solid #dddddd;
+	border-radius: 4px;
+	box-shadow: 0px -1px 3px -1px rgba(0,0,0,.2);
+}
+.mian_content .sub_banner{
+	background: #f5f5f5;
+	height: 260px;
+	overflow: hidden;
+}
+.mian_content .sub_banner .title{
+	margin: 60px 0 0 60px;
+	font-size: 4em;
+}
+.mian_content .sub_banner .title_en{
+	font-size: 2em;
+	margin: 10px 0 0 60px;
+	text-transform: uppercase;
+}
+
+/* 子页内容区 导航+图文 */
+.mian_content .content_wrap{
+	margin: 60px 0 0 0;
+}
+.mian_content .content_wrap .sub_nav{
+	width: 336px;
+	/* 216+120 */
+}
+.mian_content .content_wrap .sub_nav ul{
+	margin: 0 60px 0 60px;
+	border-top: 2px solid #ef3b42;
+}
+.mian_content .content_wrap .sub_nav li{
+
+}
+.mian_content .content_wrap .sub_nav li .link{
+	font-size: 1.6em;
+	line-height: 1.4em;
+	color: #000;
+	vertical-align: middle;
+	border-bottom: 1px dashed #dddddd;
+	display: block;
+	padding: 14px 0;
+	position: relative;
+}
+/*.mian_content .content_wrap .sub_nav li:first-child .link{
+	border:none;
+}*/
+.mian_content .content_wrap .sub_nav .link .ico{
+	position: relative;
+	margin: 0 10px 0 0;
+	height: 1em;
+	width: 1em;
+	left: -1em;
+	filter: alpha(opacity=0);
+	opacity: 0;
+}
+
+.mian_content .content_wrap .sub_nav .link .wire{
+	width: 100%;
+	background-color: #ef3b42;
+	bottom: -3px;
+	left: 0;
+	height: 2px;
+	display: block;
+	position: absolute;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
 
 
+.mian_content .content_wrap .sub_nav .link:hover .ico,
+.mian_content .content_wrap .sub_nav .hover .ico{
+	left: 0em;
+	filter: alpha(opacity=100);
+	opacity: 1;
+	color: #ef3b42;
+}
+
+.mian_content .content_wrap .sub_nav .link:hover .wire{
+	bottom: -1px;
+	z-index: 1;
+	opacity: 1;
+	filter: alpha(opacity=100);
+}
+
+/* 子页内容区——内容右边 */
+.mian_content .content_wrap .mian_content_r{
+	margin: 0 60px 0 0;
+	width: 798px;
+	min-height: 558px;
+}
+.mian_content .content_wrap .mian_content_r .product_lists{
+
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list{
+	float: left;
+	margin: 0 0 30px 30px;
+	width: 246px;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list:nth-child(3n+1){
+	margin: 0 0 20px 0;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list .cml{
+	margin: 0 0 20px 0;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list .link{
+	border:2px solid #dddddd;
+	display: block;
+	overflow: hidden;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list .link .img{
+	width: 242px;
+	height: 136px;
+	max-width: 242px;
+	display: block;
+}
+
+
+.mian_content .content_wrap .mian_content_r .product_lists .list .title{
+	font-size: 1.6em;
+	line-height: 2em;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list .describe{
+	font-size: 1.4em;
+	line-height: 1.6em;
+	height: 3.2em;
+	/*height: 60px;*/
+	color: #b3b3b3;
+}
+/*.mian_content .content_wrap .mian_content_r .list:hover .describe{
+	color: #000;
+}*/
+
+.mian_content .content_wrap .mian_content_r .product_lists .list .link:hover{
+	border:2px solid #ef3b42;
+}
+.mian_content .content_wrap .mian_content_r .product_lists .list .link:hover .img{
+	-webkit-transform:scale(1.04);
+	-moz-transform:scale(1.04);
+	-ms-transform:scale(1.04);
+	-o-transform:scale(1.04);
+	transform:scale(1.04);
+}
+
+.mian_content .ext_nonav{
+
+}
+
+.mian_content .ext_nonav .mian_content_r{
+	margin: 0 60px;
+	width: 1080px;
+}
+.mian_content .ext_nonav .mian_content_r .product_lists{
+
+}
+.mian_content .ext_nonav .mian_content_r .product_lists .list{
+	float: left;
+	margin: 0 0 30px 30px;
+	width: 246px;
+}
+.mian_content .ext_nonav .mian_content_r .product_lists .list:nth-child(3n+1){
+	margin: 0 0 30px 30px;
+}
+.mian_content .ext_nonav .mian_content_r .product_lists .list:nth-child(4n+1){
+	margin: 0 0 20px 0;
+}
+
+.mian_content .ext_nonav .mian_content_r .product_lists .list .cml{
+	margin: 0 0 20px 0;
+}
 
 
 
@@ -264,8 +447,33 @@ a:link,a:visited,a:active{
 }
 
 
+/* 分页 */
+.mod_page{
+	margin: 20px 0; 
+}
+.mod_page .list{
+	display: inline-block;
+	+display: inline;
+	+zoom: 0;
+	margin: 0 4px;
+}
+.mod_page .list a{
 
+	font-size: 1.4em;
+	line-height: 1em;
+	color: #dddddd;
+	border-radius:4px;
+	border: 1px solid #dddddd;
 
+	display: block;
+	padding: 4px 8px;
+}
+.mod_page .list a:hover,
+.mod_page .list .hover{
+	color: #fff;
+	background: #ef3b42;
+	border: 1px solid #ef3b42;
+}
 
 
 
@@ -279,7 +487,15 @@ a:link,a:visited,a:active{
 .nav_mian .link .hover,
 .nav_bottom .link .wire,
 .mod_btn,
-.mod_btn .mod_btn_ico{
+.mod_btn .mod_btn_ico,
+.mian_content .content_wrap .sub_nav .link .ico,
+.mian_content .content_wrap .sub_nav .link .wire,
+.mian_content .content_wrap .mian_content_r .product_lists .list .link,
+.mian_content .content_wrap .mian_content_r .product_lists .list .link .img,
+.mod_page,
+.mod_page .list,
+.mod_page .list a,
+.mod_page .list .hover{
 	-webkit-transition:all 0.4s ease-out;
 	-moz-transition:all 0.4s ease-out;
 	-ms-transition:all 0.4s ease-out;
@@ -298,6 +514,7 @@ a:link,a:visited,a:active{
 
 灰色	#f5f5f5
 深灰色  #dddddd
+
 
 
 */
