--- a/new/css/common.css
+++ b/new/css/common.css
@@ -360,6 +360,33 @@ a:link,a:visited,a:active{
 }
 
 
+/* 新闻列表 */
+.mod_news_lists{
+
+}
+.mod_news_lists .list{
+
+}
+.mod_news_lists .list .link{
+
+}
+.mod_news_lists .list .link .img{
+
+}
+.mod_news_lists .list .title{ 
+
+}
+.mod_news_lists .list .describe{
+
+}
+
+
+
+
+
+
+
+
 
 /* 通用模块 */
 
