--- a/new/css/page.css
+++ b/new/css/page.css
@@ -19,8 +19,6 @@
 	line-height: 1.8em;
 }
 
-
-
 .banner_index_wrap .list_01{
 	background:#fff url(../images/banner/index/img_01.png) no-repeat right 0;
 }
@@ -388,6 +386,13 @@
 	background: #f5f5f5 url(../images/banner/sub/img_1200x260_case.png) no-repeat center center;
 }
 
+/* 新闻动态 */
+.news{
+
+}
+.news .sub_banner{
+	background: #f5f5f5 url(../images/banner/sub/img_1200x260_news.png) no-repeat center center;
+}
 
 
 
