--- a/new/css/common.css
+++ b/new/css/common.css
@@ -5,6 +5,7 @@ body{
 	font-family:Helvetica,Arial,"Microsoft YaHei","微软雅黑",STXihei,"华文细黑",SimSun,"宋体",sans-serif;
 	font-size:62.5%;
 	background-color: #f5f5f5;
+	min-width: 1200px;
 }
 
 /* 通用样式 */
@@ -540,7 +541,7 @@ a:link,a:visited,a:active{
 .mod_page .list a{
 
 	font-size: 1.4em;
-	line-height: 1em;
+	line-height: 1.4em;
 	color: #dddddd;
 	border-radius:4px;
 	border: 1px solid #dddddd;
