--- a/new/css/common.css
+++ b/new/css/common.css
@@ -20,24 +20,11 @@ a:link,a:visited,a:active{
 
 
 
-.w{
-	width: 1200px;
-	margin: 0 auto;
-}
-.sub_w{
-	width: 1200px;
-	margin: 0 auto;
-}
+.w{ width: 1200px; margin: 0 auto; }
+.sub_w{ width: 1200px; margin: 0 auto; }
 
-.min_w{
-	min-width: 1200px;
-}
-
-
-
-.bg_white{
-	background: #fff;
-}
+.min_w{ min-width: 1200px; }
+.bg_white{ background: #fff; }
 
 
 
@@ -93,51 +80,13 @@ a:link,a:visited,a:active{
 
 
 /* footer */
-.footer{
-	background-color: #fff;
-	height: 60px;
-	border-top: 2px solid #dddddd;
-	overflow: hidden;
-}
-.footer .coyp{
-	font-size: 1.2em;
-	line-height: 60px;
-	margin: 0 0 0 10px;
-}
+.footer{ background-color: #fff; height: 60px; border-top: 2px solid #dddddd; overflow: hidden; }
+.footer .coyp{ font-size: 1.2em; line-height: 60px; margin: 0 0 0 10px; }
 
-.nav_bottom{
-	margin: 15px 10px 15px 0;
-}
-.nav_bottom .link{
-	font-size: 1.2em;
-	line-height: 30px;
-	color: #000;
-
-	margin: 0 10px;
-	padding: 0 0 4px 0;
-	height: 30px;
-	position: relative;
-}
-
-.nav_bottom .link .wire{
-	background-color: #ed1c24;
-
-	height: 0px;
-	width: 100%;
-	
-	position: absolute;
-	bottom: -2px;
-	left: 0;
-	opacity: 0;
-	filter: alpha(opacity=0);
-}
-
-.nav_bottom .link:hover .wire{
-	bottom: -1px;
-	height: 2px;
-	opacity: 1;
-	filter: alpha(opacity=1);
-}
+.nav_bottom{ margin: 15px 10px 15px 0; }
+.nav_bottom .link{ font-size: 1.2em; line-height: 30px; color: #000; margin: 0 10px; padding: 0 0 4px 0; height: 30px; position: relative; }
+.nav_bottom .link .wire{ background-color: #ed1c24; height: 0px; width: 100%; position: absolute; bottom: -2px; left: 0; opacity: 0; filter:alpha(opacity=0); }
+.nav_bottom .link:hover .wire{ bottom: -1px; height: 2px; opacity: 1; filter:alpha(opacity=1); }
 
 
 
@@ -146,47 +95,16 @@ a:link,a:visited,a:active{
 
 
 /* 导航 */
-.nav_mian{
-	display: block;
-}
-
-.nav_mian .link{
-	height: 60px;
-	font-size: 1.4em;
-	line-height: 60px;
-	color: #fff;
-	text-align: center;
-	display: inline-block;
-	+display: inline;
-	+zoom: 1;
-}
-
-.nav_mian .link .hover{
-	background-color:transparent;
-	height: 100%;
-	display: block;
-	border-radius: 6px;
-	line-height: 60px;
-	margin: 0 10px;
-	padding: 0 10px;
-}
-
+.nav_mian{ display: block; }
+.nav_mian .link{ height: 60px; font-size: 1.4em; line-height: 60px; color: #fff; text-align: center; display: inline-block; +display: inline; +zoom: 1; }
+.nav_mian .link .hover{ background-color:transparent; height: 100%; display: block; border-radius: 6px; line-height: 60px; margin: 0 10px; padding: 0 10px; }
 .nav_mian .link:hover .hover,
-.nav_mian .ahover{
-	background-color:#ad0007;
-	border-radius: 6px;
-	height: 30px;
-	line-height: 30px;
-	margin: 15px 10px;
-	/*vertical-align: middle;*/
-	/*display:table-row;*/
-}
+.nav_mian .ahover{ background-color:#ad0007; border-radius: 6px; height: 30px; line-height: 30px; margin: 15px 10px; }
 
 
 /* 子页内容区 */
 .mian_content{
 	background: #fff;
-
 	margin: 40px auto;
 	padding: 0 0 20px 0;
 	border: 1px solid #dddddd;
@@ -212,7 +130,8 @@ a:link,a:visited,a:active{
 .mian_content .content_wrap{
 	margin: 60px 0 0 0;
 }
-.mian_content .content_wrap .sub_nav{
+.mian_content .content_wrap .sub_nav,
+.mian_content .content_wrap .mian_content_l{
 	width: 336px;
 	/* 216+120 */
 }
@@ -273,6 +192,13 @@ a:link,a:visited,a:active{
 	opacity: 1;
 	filter: alpha(opacity=100);
 }
+
+/* 子页内容区——内容左边 */
+.mian_content .content_wrap .mian_content_l{
+
+}
+
+
 
 /* 子页内容区——内容右边 */
 .mian_content .content_wrap .mian_content_r{
