--- a/new/css/page.css
+++ b/new/css/page.css
@@ -121,6 +121,60 @@
 }
 
 
+/* 关于我们 */
+.about{
+
+}
+.about .sub_banner{
+	background: #f5f5f5 url(../images/banner/sub/img_1200x260_about.png) no-repeat center center;
+}
+
+/* 联系我们 */
+.contact{
+
+}
+.contact .sub_banner{
+	background: #f5f5f5 url(../images/banner/sub/img_1200x260_contact.png) no-repeat center center;
+}
+.contact .content_wrap .company_info{
+	/*padding:0 20px 0 20px;*/
+}
+.contact .content_wrap .company_info .name{
+	
+}
+.contact .content_wrap .company_info .info{
+	
+}
+.contact .content_wrap .company_info .introduction{
+	
+}
+.contact .content_wrap .company_info .introduction .txt{
+	
+}
+
+
+
+.contact_info_index .form{ }
+.contact_info_index .form li{ margin: 10px 0; }
+.contact_info_index .form li input,
+.contact_info_index .form .message{ height: 30px; width: 96%; padding: 4px 2%; font-size: 1.4em; line-height: 1.6em; outline: none; border: 2px solid #dddddd; color: #dddddd; }
+.contact_info_index .form .title{ font-size: 2em; margin: 0 0 20px 0; }
+.contact_info_index .form .name{ }
+.contact_info_index .form .phone{ }
+.contact_info_index .form .size{ }
+.contact_info_index .form .message{ height: 90px; }
+.contact_info_index .form .btn_submit{ left: 0; top: 0; position: absolute; border: none; width: 100%; visibility: hidden; }
+.contact_info_index .form .btn_submit_a{ display: block; }
+.contact_info_index .form  input:focus,
+.contact_info_index .form  .message:focus{ outline: 2px solid #ed1c24; color: #000; }
+.contact_info_index .form  input:hover,
+.contact_info_index .form  .message:hover{ border: 2px solid #ed1c24; }
+.contact_info_index .form .phone_hot_wrap{ margin: 20px 0; }
+.contact_info_index .form .phone_hot_wrap .img_ico{ width: 80px; height: 56px; float: left; }
+.contact_info_index .form .phone_hot_wrap .sub_title{ font-size: 2em; font-weight: bold; }
+.contact_info_index .form .phone_hot_wrap .phone_hot{ font-size: 2.4em; color: #ed1c24; font-weight: bold; }
+
+
 
 @media (max-width:1400px){
 	
